tests/rustdoc-ui/local-resources.rs
/// ![yep](../somewhere.whatever)
//~^ ERROR
pub struct Foo;
